Adicionando novas rotas na API
